src/test/deca/context/invalid/Objet/ListDeclClass-BadField.deca
// Description:
//      Accessing a non declared field
//
// Results:
//      Line 17 : Rule (0.1) Variable not found
//
// History:
//      created on 17/1/2022

class A {
    int x;
}

{
    A a = new A();
    int y;
    print(a.y);
}
